[package]
name = "plugin-canvas-slint"
version = "0.1.0"
edition = "2024"

authors = ["Jussi Viiri <jussi@viiri-audio.com>"]
readme = "README.md"
repository = "https://github.com/ilmai/plugin-things"
license = "MIT"

[dependencies]
cursor-icon.workspace = true
i-slint-common.workspace = true
i-slint-core.workspace = true
keyboard-types.workspace = true
log.workspace = true
plugin-canvas.workspace = true
portable-atomic.workspace = true
raw-window-handle.workspace = true
slint.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
i-slint-renderer-skia = { version = "1.12.1", features = ["x11"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
i-slint-renderer-femtovg = "1.12.1"
